# kube-observe

./: Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: release-plz.yaml
crates/kube-observe/: CHANGELOG.md  Cargo.toml
crates/kube-observe/src/: conditions.rs  lib.rs
