[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/*"]

[workspace.package]
edition = "2024"
authors = ["Ali Samji <aisamji@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/aisamji/kube-observe"

[workspace.dependencies]
k8s-openapi = { version = "0.26.0", features = ["schemars"] }
kube = { version = "2.0.1", features = ["derive"] }
schemars = "1.0.4"
serde = "1.0.226"
serde_json = "1.0.145"
