[package]
name = "kube-observe"
description = "Helpers for managing conditions and events in kubernetes."
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kube.workspace = true
k8s-openapi.workspace = true

[dev-dependencies]
k8s-openapi = { workspace = true, features = ["v1_30"] }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
